karnc/tests/fixtures/negative/53_consumes_a_commons/src/commerce/money.karn
commons commerce.money

type Money = Int where NonNegative
